# royale-reconstruction

./: ClashRoyale_detection_fixed.yaml  README.md  blender.py  bytetrack.yaml  clash_royale_tracking.json  data.yaml  finetune.ipynb  game_tracks.json  gen_sprite_frames.ipynb  inference.ipynb  inference.py  labels_yaml.json  main.py  pyproject.toml
arena/ice_arena/: ice_bridge.glb  king_blue.glb  king_red.glb  king_tower_blue.glb  king_tower_red.glb  princess.glb
clash_royacado_tiny/test/labels/: 00000900.txt  00000901.txt  00000902.txt  00000903.txt  00000904.txt  00000905.txt  00000906.txt  00000907.txt  00000908.txt  00000909.txt  00000910.txt  00000911.txt  00000912.txt  00000913.txt  00000914.txt  00000915.txt  00000916.txt  00000917.txt  00000918.txt  00000919.txt  00000920.txt  00000921.txt  00000922.txt  00000923.txt  00000924.txt  00000925.txt  00000926.txt  00000927.txt  00000928.txt  00000929.txt  00000930.txt  00000931.txt  00000932.txt  00000933.txt  00000934.txt  00000935.txt  00000936.txt  00000937.txt  00000938.txt  00000939.txt  (+60 more)
clash_royacado_tiny/train/: labels.cache
clash_royacado_tiny/train/labels/: 00000000.txt  00000001.txt  00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000007.txt  00000008.txt  00000009.txt  00000010.txt  00000011.txt  00000012.txt  00000013.txt  00000014.txt  00000015.txt  00000016.txt  00000017.txt  00000018.txt  00000019.txt  (+680 more)
clash_royacado_tiny/val/: labels.cache
wizard_3d_model/: pose_000.glb  pose_001.glb  pose_002.glb  pose_003.glb  pose_004.glb  pose_005.glb  pose_006.glb  pose_007.glb
(+202 files in other folders)
