[project]
name = "clash-royacado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pip>=26.0.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.19",
]
